--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@react-three/drei": "^9.84.3",
     "@react-three/fiber": "^8.14.2",
     "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "maath": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.20.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0"
   },
@@ -31,7 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.30",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
 }
